# Test

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh
cmake/: CompileOptions.cmake
examples/: gcd.pas  hash.pas  helloworld.pas  min.pas  sort.pas  strings.pas
src/: CMakeLists.txt
src/grammar/: CMakeLists.txt  Pascal.g4
src/libpas/: CMakeLists.txt
src/libpas/libpas/: compiler.cpp  compiler.hpp  dump_tokens.cpp  dump_tokens.hpp
src/libpas/libpas/ast/: Ast.cpp  Ast.hpp  CodeGenerator.cpp  CodeGenerator.hpp  SemanticAnalysier.cpp  SemanticAnalysier.hpp  SymbolTable.hpp  Visitor.hpp  XmlSerializer.cpp  XmlSerializer.hpp
src/libpas/libpas/ast/detail/: Builder.cpp  Builder.hpp
src/libpas/test/: codegen.cpp  lexer.cpp  parser.cpp  semantic.cpp
src/pascal-compiler/: CMakeLists.txt
src/pascal-compiler/pascal-compiler/: main.cpp
